--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p style="color:#80223a; font-size: 30px;
 font-family: 'Lato';">We offer clothes for all and for everyone! </p>
         </div>
-        <div class="col-md-6 offset-md-3 header-buttons"><button class="btn btn-outline-secondary" type="button"><a href="#WhyChooseUs">Click here</a></button></div>
+        <div><button class="btn btn-outline-secondary" type="button"><a href="#WhyChooseUs">Click here</a></button></div>
     </div>
 </div></header><section class="features-icons bg-light text-center" id="WhyChooseUs">
     <div class="container">
