--- a/index.html
+++ b/index.html
@@ -221,8 +221,10 @@ font-family: 'Lato';">
       </div>
    
     </div>
-</section><div class="container sombra borderedondo">
-
+</section>
+   <section>
+    
+    <div class="container sombra borderedondo" id="contact">
         <div class="row">
             <div class="col text-center">
                 <h1>Contact us</h1>
@@ -247,6 +249,7 @@ font-family: 'Lato';">
         </div>
 
 </div>
+    </section>
     <footer id="myFooter" style="padding:0px;">
         <div class="container-fluid">
             <div class="row text-center"><div class="col-12">
