--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@ font-family: 'Lato';">
 </section>
    <section>
     
-    <div class="container sombra borderedondo" id="contact">
+    <div class="container sombra borderedondo">
         <div class="row">
             <div class="col text-center">
                 <h1>Contact us</h1>
             </div>
         </div>
-        <div class="row" >
+        <div class="row" id="contact">
             <div class="col-md-6">
                 <div class="card">
                     <form method="post">
