--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@ font-family: 'Lato';">
    <section>
     
     <div class="container sombra borderedondo">
-        <div class="row">
+        <div class="row" id="contact">
             <div class="col text-center">
                 <h1>Contact us</h1>
             </div>
         </div>
-        <div class="row" id="contact">
+        <div class="row">
             <div class="col-md-6">
-                <div class="card">
+                <div class="card"  id="contact">
                     <form method="post">
                         <div class="form-group"><input type="text" class="form-control" name="name" placeholder="Name" /></div>
                         <div class="form-group"><input type="email" class="form-control is-invalid" name="email" placeholder="Email" /><small class="form-text text-danger">Please enter a correct email address.</small></div>
