--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ font-family: 'Lato';">
         <div class="row">
             <div class="col-md-6">
                 <div class="card"  id="contact">
-                    <form method="post">
+                    <form method="post"  id="contact">
                         <div class="form-group"><input type="text" class="form-control" name="name" placeholder="Name" /></div>
                         <div class="form-group"><input type="email" class="form-control is-invalid" name="email" placeholder="Email" /><small class="form-text text-danger">Please enter a correct email address.</small></div>
                         <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
